src/test/resources/syntactic/tests/error/TC_ERROR_IMPL.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 1 | SE ESPERABA: ., fn, st Y SE ENCONTRO: } |
impl A{

}
start{

}